# dcr-djnago-test

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
testsite/: db.sqlite3  manage.py
testsite/countries/: models.py  urls.py  views.py
testsite/countries/management/commands/: update_country_listing.py
testsite/countries/migrations/: 0001_initial.py  0002_add_capital_and_tld_to_Country.py
testsite/templates/testsite/: index.html
testsite/testsite/: settings.py  urls.py  wsgi.py
