[project]
name = "dcr-django-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "django==2.2.17",
    "pytz==2020.5",
    "sqlparse==0.4.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ruff>=0.9.7",
]
